syntax = "proto3";
import "finance_prod.proto";

option java_multiple_files = true;
option java_package = "com.shellshellfish.aaas.userinfo.grpc";
option java_outer_classname = "UserInfoProto";
option objc_class_prefix = "UIP";

service UserInfoService {
    rpc GetUserId (UserIdQuery) returns (UserId) {
    }
    rpc GetUserBankInfo(UserIdOrUUIDQuery) returns (UserBankInfo){
    }
    rpc GenUserProdsFromOrder(FinanceProdInfosQuery) returns (UserProdId){}

    rpc GetUerUUIDByUserId (UserId) returns (UserUUID){}
    rpc UpdateUserProd(UpdateUserProdReqs) returns(UserProdId){}
}

message UserIdQuery {
  string uuid = 1;
  string telphone = 2;
  string pid = 3;
}

message UserId{
  int64 userId = 1;
}

message UserUUID{
  string userUUID = 1;
}

message UserIdOrUUIDQuery{
  int64 userId = 1;
  string uuid = 2;
}

message UserBankInfo{
  int64 userId = 1;
  string uuid = 2;
  string userName = 3;
  string userPid = 4;
  string cellphone = 5;
  repeated CardInfo cardNumbers = 6;
}


message FinanceProdInfosQuery{
  int64 userId = 1; //用戶ID
  repeated FinanceProdInfo prodList = 2; //产品成分List
}
message UserProdId{
  int64 user_prod_id = 1;//用户理财产品ID 如果为-1 表示对应的操作失败
}

message UpdateUserProdReqs{
  int64 user_id = 1; //用户id
  int64 user_prod_id = 2; //用戶产品id
  int64 prod_id = 3;//理財產品ID
  int64 group_id = 4;//类别ID
  repeated UpdateUserProdReq updateUserProdReq = 5; //更新的基金占比数列
}

message UpdateUserProdReq{
  int32 fund_share = 1;//基金占比
  int64 user_prod_id = 2; //用户理财产品id
  string fund_code = 3; //基金code
}
message CardInfo{
  string user_pid = 1; //身份证
  string card_numbers = 2; //银行卡号
}